<resources>
    <string name="app_name">Geek Helper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="helper">Якщо жоден із варінатів Вам не підходить, оберіть, будь ласка, варіант, який найбільше підходить для Вашого випадка</string>
    <string name="dont_knov_vhat_choose">не знаєш що саме обрати ?</string>
    <string name="we_have_an_idea">we have an idea</string>
    <string name="text_idea">у нас є ідея</string>
    <string name="go_to_fast_test">пройти тест ►►</string>
    <string name="loading">Loading...</string>
    <string name="managers_fighting">А зараз Ви будете переадресовані на Whatsapp до нашого менеджера </string>
    <string name="for_being_awesome_">for being awesome, we hope you enjoy your purchase 🖤</string>
    <string name="question_1_for_me">Для себе</string>
    <string name="question_1_for_friend">Для друга / подруги</string>
    <string name="question_1_for_love">Для коханої людини</string>
    <string name="question_1_for_parents">Для батьків</string>
    <string name="question_2_harry_potter">Harry Potter</string>
    <string name="question_2_marvel_dc">Marvel / Dc</string>
    <string name="question_2_squid_game">Гра в кальмара</string>
    <string name="question_2_game_thrones">Гра Престолів</string>
    <string name="question_2_star_vars">star Wars</string>
    <string name="question_3_yes">Так</string>
    <string name="question_3_no_thanks">Ні, не потрібно</string>
    <string name="question_3_both_variants">Розгляну обидва варіанти</string>
    <string name="created_by_geekshop_ukaine">© Created by geekshop_ukaine</string>
    <string name="question_4_200">до 200 грн</string>
    <string name="question_4_201_500">до 500 грн</string>
    <string name="question_4_501_999">до 999 грн</string>
    <string name="question_4_1000">1000+ грн</string>
    <string name="confirm_btn">confirm</string>
    <string name="go_to_site"><u>Сформувати замовлення самостійно на нашому сайті</u></string>
    <string name="start_test_again">↓↓ пройти тест ще раз ↓↓</string>
    <string name="add_quest_marvel_dc">* Для Marvel / dc У НАС Є ДОДАТКОВЕ ЗАПИТАННЯ?</string>
    <string name="add_question_superman">superman</string>
    <string name="add_question_batman">batman</string>
    <string name="add_question_loki">loki</string>
    <string name="add_question_spider_man">spider-man</string>
    <string name="add_question_iron_man">iron man</string>
    <string name="add_question_harley_quinn">harley quinn</string>
    <string name="add_question_deadpool">deadpool</string>
    <string name="add_question_winter_soldier">Winter Soldier</string>
    <string name="add_question_marvel_all">інше Marvel</string>
    <string name="add_question_wolverine">Wolverine</string>
    <string name="citata_dumbldor">Майте терпіння... \n <u>©Альбус Дамблдор</u></string>
    <string name="text_go_to_shop_cart">перейти до кошика замовлень</string>
    <string name="text_take_delivery">Оберіть спосіб доставки</string>
    <string name="delivery_person_data">дані одержувача</string>
    <string name="text_delivery_data">дані доставки</string>
    <string name="additional_info">Додаткова інформація</string>
    <string name="ukrposhta_name">Укрпошта</string>
    <string name="nova_poshta_name">Нова пошта</string>
    <string name="go_to_choose_delivery">перейти до оформлення</string>
    <string name="other_important_info_text">Інша важлива інформація</string>
    <string name="text_looks_like_error_or_emorty_list">Схоже сталася помилка...\n перевірте підключення до інтернету \n або ж за Вашими критеріями ми не знайшли жодного варіанту...</string>
    <string name="thank_you_text">Thank You</string>
    <string name="text_samovivoz"><u>самовивіз</u></string>
    <string name="text_city_village">Місто/селище/смт/село</string>
    <string name="text_title_ve_take_ideal_variants">За допомогою магії ми підібрали ідеальні варіанти для Вас</string>
    <string name="text_add_to_shop_cart">додати до кошика</string>
    <string name="text_dep_delivery_number">Номер відділення</string>
    <string name="text_title_ask_budget">На який бюджет розраховуєте?</string>


    <string-array name="ukraine_regions">
        <item>Київська область</item>
        <item>Вінницька область</item>
        <item>Волинська область</item>
        <item>Дніпропетровська область</item>
        <item>Донецька область</item>
        <item>Житомирська область</item>
        <item>Закарпатська область</item>
        <item>Запорізька область</item>
        <item>Івано-Франківська область</item>
        <item>Кіровоградська область</item>
        <item>Крим</item>
        <item>Луганська область</item>
        <item>Львівська область</item>
        <item>Миколаївська область</item>
        <item>Одеська область</item>
        <item>Полтавська область</item>
        <item>Рівненська область</item>
        <item>Сумська область</item>
        <item>Тернопільська область</item>
        <item>Харківська область</item>
        <item>Херсонська область</item>
        <item>Хмельницька область</item>
        <item>Черкаська область</item>
        <item>Чернівецька область</item>
        <item>Чернігівська область</item>
    </string-array>

    <string-array name="nova_poshta_payments_var">
        <item>повна оплата на карту</item>
        <item>повна оплата на рахунок ФОП</item>
        <item>100 грн передплати, решта наложка</item>
        <item>оплата при отриманні</item>
    </string-array>

    <string-array name="ukrposhta_payments_var">
        <item>повна оплата на карту</item>
        <item>повна оплата на рахунок ФОП</item>
    </string-array>

    <string-array name="samovivoz_payments_var">
        <item>повна оплата на карту</item>
        <item>повна оплата на реєстраційний рахунок ФОП</item>
        <item>оплата при отриманні</item>
    </string-array>


</resources>