<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/rose"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ThankYouFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_47"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_52"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_25"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_20"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_17"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_70"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_5"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_10"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_30"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_35"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_50"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_80"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.80" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_40"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_60"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_90"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_15"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_80_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_75_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_95"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_55"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_45"
        style="@style/guideline_simple_style_horizontal"
        app:layout_constraintGuide_percent="0.45" />


    <ImageView
        android:id="@+id/img_thank_you"
        android:visibility="invisible"
        style="@style/image_on_start_screen"
        android:src="@drawable/icon_done"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_20"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_70"
        app:layout_constraintStart_toEndOf="@id/guideline_vert_30"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_5" />

    <TextView
        android:id="@+id/tv_thank_you"
        android:textColor="@color/black"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:fontFamily="@font/kaushan_script_regular"
        android:lines="1"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/thank_you_text"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_20"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_30"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_75_"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_25" />

    <TextView
        android:id="@+id/tv_thank_being_cool"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:fontFamily="@font/jost_italic"
        android:lines="2"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/for_being_awesome_"
        app:layout_constraintTop_toBottomOf="@id/tv_thank_you"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_35"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_80_"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_20" />

    <TextView
        android:id="@+id/tv_created_by"
        style="@style/tv_created_by_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_managers_fighting"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:fontFamily="@font/jost_italic"
        android:lines="3"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/managers_fighting"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor_45"
        app:layout_constraintBottom_toTopOf="@id/guideline_hor_60"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_85"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_15" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_empty_result_list"
        android:layout_width="0dp"
        android:src="@drawable/girl_ipone_thank_you"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_90"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_80_"
        app:layout_constraintStart_toEndOf="@id/guideline_vert_20"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_60" />



</androidx.constraintlayout.widget.ConstraintLayout>